prd_package/objects/Membership__c.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer that uses this membership</description>
        <label>AccountId</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Memberships</relationshipLabel>
        <relationshipName>Memberships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Airline__c</fullName>
        <description>The airline that issued this membership</description>
        <label>Airline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXTMember__c</fullName>
        <description>The External Id of this membership which is Airline__c + &apos;_&apos; + Name</description>
        <externalId>true</externalId>
        <label>EXT Member</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <description>The date when the Tier of Royal Orchid Plus expired</description>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Favorite_Food__c</fullName>
        <description>Food preference of the customer</description>
        <label>Favorite Food</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>Language preference of the customer</description>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MembershipId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>In case of duplication, this field will related to the actual membership</description>
        <label>Merge with memership no.</label>
        <referenceTo>Membership__c</referenceTo>
        <relationshipLabel>Memberships</relationshipLabel>
        <relationshipName>Memberships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mileages_Current_Quater_Expiry_Date__c</fullName>
        <description>The expiry date of the upcoming quater</description>
        <label>Mileages Current Quater Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mileages_Current_Quater__c</fullName>
        <description>The expiring mileages of the upcoming quater</description>
        <label>Mileages Current Quater</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mileages_Q_1_Expiry_Date__c</fullName>
        <description>The expiry date of the first quater of the year</description>
        <label>Mileages Q+1 Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mileages_Q_1__c</fullName>
        <description>The expiring mileages of the first quater of the year</description>
        <label>Mileages Q+1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mileages_Q_2_Expiry_Date__c</fullName>
        <description>The expiry date of the second quater of the year</description>
        <label>Mileages Q+2 Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mileages_Q_2__c</fullName>
        <description>The expiring mileages of the second quater of the year</description>
        <label>Mileages Q+2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mileages_Q_3_Expiry_Date__c</fullName>
        <description>The expiry date of the third quater of the year</description>
        <label>Mileages Q+3 Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mileages_Q_3__c</fullName>
        <description>The expiring mileages of the third quater of the year</description>
        <label>Mileages Q+3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mileages_Recent_Transaction__c</fullName>
        <description>Not used anywhere</description>
        <label>Mileages Recent Transaction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mileages__c</fullName>
        <description>The overall mileages of this membership</description>
        <label>Mileages</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <description>The occupation of the customer</description>
        <label>Occupation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seat_Preference__c</fullName>
        <description>Seat preference of the customer</description>
        <label>Seat Preference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the membership whether it is Active, Inactive, Dead, Closed or Merged</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Dead</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Merge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tier_WS__c</fullName>
        <description>The tier of the membership according to the raw data from web service</description>
        <label>Tier WS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <description>The tier of the membership (for Royal Orchid Plus, the tier will be translated to user-friendly term such as GOLD, PLAT or BASE)</description>
        <label>Tier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isExpired__c</fullName>
        <description>The incicator when the Tier of this membership is expired for Royal Orchid Plus (Currently not used but must be kept anywhere 26/05/17)</description>
        <formula>Expiry_Date__c &lt;  TODAY()</formula>
        <label>Expired</label>
        <type>Checkbox</type>
    </fields>
    <label>Membership</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Membership Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Memberships</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>